--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,13 @@
+:root{
+  --maincolor: #cfcfce;
+}
+
+
 /* The body styles */
 body {
    
   /* Text and font styles */
-  background-color: #f8edd8;
+  background-color: #e9e8e8;
   color: #253237;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -36,7 +41,7 @@ code {
 
 /* Styles for a card */
 .card {
-  box-shadow: 0px 5px 7px #ff8800;
+  box-shadow: 0px 5px 7px var(--maincolor);
 }
 
 /* Styles for the navbar */
@@ -47,13 +52,13 @@ code {
 
 /* Styles for the navigation links on hover */
 .nav-link:hover {
-  color: #ff8800;
+  color:#000000;
 }
 
 /* General button styles */
 .btn {
   color: white;
-  background-color: #ff8800;
+  background-color: var(--maincolor);
 }
 
 /* Button styles for primary buttons */
@@ -63,7 +68,7 @@ code {
 
 /* Navigation item styles on hover */
 .nav-item:hover {
-  background-color: #ffeacb6c;
+  background-color: #c2c1c16c;
   border-radius: 3px;
 }
 
@@ -71,6 +76,7 @@ code {
 .card-title {
   color: #212529;
   font-size: 35px;
+  text-align: center;
 }
 
 /* Styles for the popup box */
@@ -110,7 +116,7 @@ code {
 
 /* Custom styles for cancel buttons */
 .custom-btn-cancel {
-  background-color: #ff8800;
+  background-color: var(--maincolor);
 }
 
 /* Cursor style for clickable elements */
@@ -164,7 +170,7 @@ code {
 
 /* Styles for a chart container */
 .chart-container {
-  background-color: white;
+  background-color: #ffffff;
   border-radius: 5px;
   width: 650px;
   margin-top: 30px;
