--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,14 @@
-:root{
+/*
   --maincolor: #cfcfce;
   --fontcolor: #050505;
-}
-
+*/
 
 /* The body styles */
 body {
    
   /* Text and font styles */
   background-color: #e9e8e8;
-  color:var(--fontcolor);
+  color:#050505;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -43,7 +42,7 @@ code {
 
 /* Styles for a card */
 .card {
-  box-shadow: 0px 5px 7px var(--maincolor);
+  box-shadow: 0px 5px 7px #cfcfce;
 }
 
 /* Styles for the navbar */
@@ -54,13 +53,13 @@ code {
 
 /* Styles for the navigation links on hover */
 .nav-link:hover {
-  color:var(--fontcolor);
+  color:#050505;
 }
 
 /* General button styles */
 .btn {
-  color: var(--fontcolor);
-  background-color: var(--maincolor);
+  color: #050505;
+  background-color: #cfcfce;
 }
 
 /* Button styles for primary buttons */
@@ -76,7 +75,7 @@ code {
 
 /* Styles for the card titles */
 .card-title {
-  color: var(--fontcolor);
+  color: #050505;
   font-size: 35px;
   text-align: center;
 }
@@ -118,7 +117,7 @@ code {
 
 /* Custom styles for cancel buttons */
 .custom-btn-cancel {
-  background-color: var(--maincolor);
+  background-color: #cfcfce;
 }
 
 /* Cursor style for clickable elements */
